Splitting legs preserving Stable leg groups

--- a/Assets/scripts/units/equipment/equipment.asmdef
+++ b/Assets/scripts/units/equipment/equipment.asmdef
@@ -2,7 +2,8 @@
     "name": "equipment",
     "references": [
 		"geometry2d",
-		"debug"
+		"debug",
+		"extensions"
 	],
     "includePlatforms": [],
     "excludePlatforms": [],
