before changing folding_direction to Side

--- a/Assets/scripts/extesions/extensions.asmdef
+++ b/Assets/scripts/extesions/extensions.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "extensions",
     "references": [
-		"geometry2d"
+		"geometry2d",
+		"Unity.InputSystem"
 	],
     "includePlatforms": [],
     "excludePlatforms": [],
