--- a/Assets/scripts/geometry2d/geometry2d.asmdef
+++ b/Assets/scripts/geometry2d/geometry2d.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "geometry2d",
-    "references": [],
+    "references": [
+        "debug",
+        "third_party"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
