--- a/Assets/scripts/units/equipment/transport/legs/legs.asmdef
+++ b/Assets/scripts/units/equipment/transport/legs/legs.asmdef
@@ -4,7 +4,8 @@
         "geometry2d",
 		"equipment",
 		"extensions",
-        "debug"
+        "debug",
+        "settings"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
