refactoring: separation of Equipment and Divisible children

--- a/Assets/scripts/units/equipment/transport/spider_legs/legs.asmdef
+++ b/Assets/scripts/units/equipment/transport/spider_legs/legs.asmdef
@@ -1,9 +1,13 @@
 {
-    "name": "geometry2d",
     "references": [
+        "equipment",
+        "Divisible_body",
+        "extensions",
         "debug",
+        "settings",
         "third_party"
     ],
+    "name": "Legs",
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
