started holding weapon without a stock

--- a/Assets/scripts/units/equipment/transport/creeping_legs/creeping_legs.asmdef
+++ b/Assets/scripts/units/equipment/transport/creeping_legs/creeping_legs.asmdef
@@ -7,7 +7,7 @@
         "settings",
         "third_party"
     ],
-    "name": "Legs",
+    "name": "creeping_legs",
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
