--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "registry": "https://packages.unity.com",
   "dependencies": {
+	"com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.2d.animation": "5.2.0",
     "com.unity.2d.psdimporter": "4.3.1",
     "com.unity.2d.sprite": "1.0.0",
